# deepsweep

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_STATUS.md  LICENSE  Makefile  POSTHOG-GUIDE.md  PRODUCTION_TESTING_GUIDE.md  README.md  SECURITY.md  SUMMARY.md  TELEMETRY_STATUS_REPORT.md  TEST-SUMMARY.md  action.yml  benchmark.sh  production-checklist.sh  pyproject.toml  results.sarif  run-all-tests.sh  test-api-endpoint.sh  test-integration.sh  test-mock-server.py  test-posthog.py  test_api_connectivity.py  test_local_verification.py  test_posthog.py  test_production_apis.py  test_real_cli.py  test_telemetry_integration.py  verify-design-standards.sh  verify-telemetry.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deepsweep-scan.yml  release.yml  security.yml
docs/: POSTHOG_SETUP.md  TESTING-QUICK-START.md  TESTING.md
scripts/: quality-check.sh
src/deepsweep/: __init__.py  cli.py  constants.py  exceptions.py  models.py  output.py  patterns.py  telemetry.py  validator.py
src/deepsweep_ai/: __init__.py  __main__.py  api_client.py  cli.py  config.py  pricing.py  reporter.py  scanner.py  telemetry.py
src/deepsweep_ai/detectors/: __init__.py  base.py  destructive_ops.py  exfiltration.py  extension_risk.py  mcp_poisoning.py  prompt_injection.py  supply_chain.py
src/deepsweep_ai/patterns/: __init__.py  cves.py  destructive_ops.py  exfiltration.py  extension_risk.py  mcp_poisoning.py  prompt_injection.py  supply_chain.py
tests/: conftest.py  test_cli.py  test_output.py  test_scanner.py  test_telemetry.py  test_validator.py
tests/test_detectors/: test_mcp_poisoning.py  test_prompt_injection.py
