[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deepsweep-ai"
version = "1.0.0rc1"
description = "The #1 Security Gateway for Agentic AI Code Assistants"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "DeepSweep", email = "security@deepsweep.ai" }
]
keywords = [
    "security-gateway",
    "agentic-ai",
    "ai-security",
    "mcp-security",
    "prompt-injection",
    "owasp",
    "cursor",
    "copilot",
    "claude-code",
    "windsurf",
    "amazon-q",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
deepsweep = "deepsweep_ai.cli:main"

[project.urls]
Homepage = "https://deepsweep.ai"
Documentation = "https://docs.deepsweep.ai"
Repository = "https://github.com/deepsweep-ai/deepsweep"
Changelog = "https://github.com/deepsweep-ai/deepsweep/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/deepsweep_ai"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=deepsweep_ai --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
strict = true
